[package]
name = "tokio-serde-json"
version = "0.1.0"
authors = ["Carl Lerche <me@carllerche.com>"]

[dependencies]
futures = "0.1"
bytes = "0.4"
tokio-serde = { git = "https://github.com/carllerche/tokio-serde" }
serde = "0.9"
serde_json = "0.9"

[dev-dependencies]
tokio-core = "0.1"
tokio-io = "0.1"
