[package]
name = "tokio-serde-json"
# When releasing to crates.io:
# - Update html_root_url.
# - Create "v0.1.x" git tag.
version = "0.2.0"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/carllerche/tokio-serde-json"
homepage = "https://github.com/carllerche/tokio-serde-json"
documentation = "https://docs.rs/tokio-serde-json/0.1.0"
description = """
Utilities needed to easily implement a Tokio JSON transport using Serde for
JSON serialization and deserialization of frame values.
"""

[dependencies]
futures = "0.1"
bytes = "0.4"
tokio-serde = "0.3"
serde = "1.0"
serde_json = "1.0"

[dev-dependencies]
tokio = "0.1"
