[package]
name = "tokio-serde-json"
version = "0.3.0"
edition = "2018"
authors = ["Carl Lerche <me@carllerche.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/carllerche/tokio-serde-json"
homepage = "https://github.com/carllerche/tokio-serde-json"
documentation = "https://docs.rs/tokio-serde-json/0.1.0"
description = """
Utilities needed to easily implement a Tokio JSON transport using Serde for
JSON serialization and deserialization of frame values.
"""

[dependencies]
bytes = "0.4"
futures-preview = "0.3.0-alpha"
pin-project = "0.4"
serde = "1.0"
serde_json = "1.0"
tokio-serde = "0.4.0"

[dev-dependencies]
tokio = "0.2.0-alpha"
